plugins {
    id 'application'
    id 'io.freefair.lombok' version '8.4'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'info.picocli:picocli:4.7.5'

    // https://mvnrepository.com/artifact/com.google.dagger/dagger
    implementation 'com.google.dagger:dagger:2.37'
    annotationProcessor 'com.google.dagger:dagger-compiler:2.37'

    // https://mvnrepository.com/artifact/org.springframework/spring-context
    implementation 'org.springframework:spring-context:6.1.1'

    // https://mvnrepository.com/artifact/io.vavr/vavr
    implementation 'io.vavr:vavr:0.10.4'

    // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
    testImplementation 'org.slf4j:slf4j-simple:1.7.32'

    // https://mvnrepository.com/artifact/com.google.flogger/flogger
    implementation 'com.google.flogger:flogger:0.6'

    // https://mvnrepository.com/artifact/com.google.flogger/flogger-system-backend
    implementation 'com.google.flogger:flogger-system-backend:0.6'

    testImplementation(platform('org.junit:junit-bom:5.8.1'))
    testImplementation('org.junit.jupiter:junit-jupiter')
    testImplementation 'com.tngtech.archunit:archunit-junit5:0.21.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'elohhim.aoc.AoCApp'
}

test {
    useJUnitPlatform()
}



tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += "--enable-preview"
}

